--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             
  <!-- Carousel !-->
   
-    <div id="myCarousel" class="carousel caption slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel caption slide hidden-xs" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -189,10 +189,9 @@
 
 <div id="OnderdeelInfo">
 
-
       <div class="panel-group" id="accordion">
        <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-3 hidden-xs">
           <center>
             <div class="thumbnail">
                 <div class="onderdeelcaption animated">
@@ -203,7 +202,7 @@
             </div>
         </div>
       
-        <div class="col-sm-3">
+        <div class="col-sm-3 hidden-xs">
           <center>
             <div class="thumbnail">
                 <div class="onderdeelcaption animated">
@@ -213,7 +212,7 @@
                 <img src="img/thumbs/drumband.jpg" class="img-rounded" alt="De drumband">
             </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 hidden-xs">
           <center>
             <div class="thumbnail">
                 <div class="onderdeelcaption animated">
@@ -223,7 +222,7 @@
                 <img src="img/thumbs/twirl.jpg" class="img-rounded" alt="De majorettegroep">
             </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 hidden-xs">
           <center>
             <div class="thumbnail">
                 <div class="onderdeelcaption animated">
