--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <body data-spy="scroll">
 
+
 <!--Blueimp image gallery-->
 
 <div id="blueimp-gallery" class="blueimp-gallery">
@@ -46,6 +47,8 @@
         <h4 class="modal-title">Inloggen</h4>
       </div>
       <div class="modal-body">
+
+ <div data-alerts="alerts" data-fade="3000"></div>
         
 <form class="form-horizontal" role="form">
   <div class="form-group">
@@ -61,10 +64,11 @@
        <br><a href="#">Login aanvragen</a> (alleen voor leden)</br>
     </div>
   </div>
-    <div class="modal-footer">
+   <div class="modal-footer">
      <button type="submit" class="btn btn-primary">Inloggen</button>
-    </div> 
-  </form>
+     </form> 
+   </div> 
+  
     </div>
   </div>
       </div>
@@ -617,6 +621,7 @@ Basis voor de opleiding is het raamleerplan van het NIB (Nederlands Instituut vo
     <script src="js/bootstrap-hover-dropdown.js"></script>
     <script src="js/holder.js"></script>
     <script src="js/blueimp-gallery.min.js"></script>
+    <script src="js/jquery.bsAlerts.min.js"></script>
     <script src="js/obkfrontend.js"></script>
 
   </body>
