--- a/frontend/login.html
+++ b/frontend/login.html
@@ -13,14 +13,14 @@
         
 <form class="form-horizontal" role="form" id="loginform">
   <div class="form-group">
-    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+    <label for="inputEmail" class="col-sm-2 control-label uitlijnen">Email</label>
     <div class="col-sm-10">
       <input type="email" class="form-control" id="inputEmail" placeholder="Email">
       <span class="loginerror" style="display:none"> Voer een geldig email adres in. </span>  
     </div>
   </div>
   <div class="form-group">
-    <label for="inputPassword" class="col-sm-2 control-label">Wachtwoord</label>
+    <label for="inputPassword" class="col-sm-2 control-label uitlijnen">Password</label>
     <div class="col-sm-10">
       <input type="password" class="form-control" id="inputPassword" placeholder="Wachtwoord">
        <span class="passworderror" style="display:none"> Voer een wachtwoord in. </span>  
