--- a/frontend/newsform.html
+++ b/frontend/newsform.html
@@ -1,24 +1,28 @@
 <!--Houd mij op de hoogte-->
 
-<div class="col-sm-4">
-<div class="panel panel-default">
+<div class="col-sm-4 uitlijnen">
+<div class="panel panel-default" rel="popover" data-placement="top" data-content="Wilt u op de hoogte gehouden per worden? Meldt u aan voor de nieuwsbrief!">
   <div class="panel-heading">
     <h4 class="panel-title"><strong><span class="glyphicon glyphicon-send"></span> Houd mij op de hoogte</strong></h4>
   </div>
+<div data-alerts="alerts" data-fade="3000"></div>
   <div class="panel-body"> 
-<form class="form-horizontal" role="form">
   <div class="form-group">
     <div class="col-sm-12">
       <input type="text" class="form-control" id="inputNaam" placeholder="Uw naam">
+      <span class="naamerror" style="display:none"> Voer uw naam in. </span>  
     </div>
   </div>
+&nbsp;
   <div class="form-group">
     <div class="col-sm-12">
-      <input type="email" class="form-control" id="inputEmail" placeholder="E-mail">
+      <input type="email" class="form-control" id="inputEmail2" placeholder="E-mail">
+      <span class="emailerror" style="display:none"> Voer een geldig email adres in. </span>  
     </div>
   </div>
-     <button type="submit" class="btn btn-primary pull-right newsform">Verzenden</button>
-</form>
+<p>&nbsp;</p>
+     <button class="btn btn-primary pull-right newsform" data-loading-text="Valideren...">Verzenden</button>
+
    </div>
   </div>
 </div>
